--- a/subpage-two.html
+++ b/subpage-two.html
@@ -2,43 +2,32 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Sushi Types</title>
+	<title>Project One - Subpage One</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	
 </head>
-
 <body>
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
 		<!-- header, h1, logo etc content -->
-		
+		<h1>Your Project Name, or whatever</h1>
 	</header>
 	<nav>
-		<h1>SUSHI</h1>
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Menu</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="#">link</a></li>
+			<li><a href="#">link</a></li>
+			<li><a href="#">link</a></li>
 		</ul>
 	</nav>
 	<main>
 	<!-- Main content here -->
-	<img src="file:///Users/christine/Desktop/sushi-home.png">
 	</main>
-	<ul class="bottom-list">
-		<li><a href="subpage-one.html">NIGIRI</a></li>
-		<li><a href="subpage-two.html">TEMAKI</a></li>
-		<li><a href="subpage-three.html">MAKI</a></li>
-		<li><a href="subpage-four.html">URAMAKI</a></li>
-	</ul>
 	<footer>
 		<!-- footer content here -->
-		&copy; Christine Miller
 	</footer>
 </body>
 </html>
