all content entered

--- a/subpage-four.html
+++ b/subpage-four.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Sushi - Nigiri</title>
+	<title>Shushi - Uramaki</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body class="subpage-one">
+<body>
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
 		<!-- header, h1, logo etc content -->
-		<h1>SUSHI</h1>
+		<h1>URAMAKI</h1>
 	</header>
 	<nav>
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
@@ -24,18 +24,18 @@
 		</ul>
 	</nav>
 	<main>
-		<img class="sushi-one" src="file:///Users/christine/Desktop/nigiri.png">
+		<img class="sushi-four" src="file:///Users/christine/Desktop/uramaki.png">
 	<!-- Main content here -->
 	</main>
 	<div>
 		<h2>What is it?</h2>
-	<p>A topping, usually fish, served on top of sushi rice</p>
+	<p>Similar to Maki, but rice is on the outside and seaweed wraps around the filling</p>
 	<h2>Other info!</h2>
-	<p>Not all nigiri is raw, though this dish is best for people who want to appreciate the flavor of the fish, shellfish, or other toppings</p>
-	<h2>Topping options</h2>
-	<p>Fish (salmon, tuna), eel, squid, shrimp, egg, scallop, or roe.</p>
+	<p>These rolls often have lots of toppings and sauces — they may either be cooked or raw</p>
+	<h2>Filling options</h2>
+	<p>Typically you would see Uramaki roll coated with toasted sesame seeds with fillings of avocado and salmon.</p>
 </div>
-	<ul class="bottom-list">
+		<ul class="bottom-list">
 		<li class="bottom"><a href="subpage-one.html">NIGIRI</a></li>
 		<li class="bottom"><a href="subpage-two.html">TEMAKI</a></li>
 		<li class="bottom"><a href="subpage-three.html">MAKI</a></li>
