--- a/subpage-two.html
+++ b/subpage-two.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Project One - Subpage One</title>
+	<title>Shushi - Temaki</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
@@ -13,19 +13,34 @@
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
 		<!-- header, h1, logo etc content -->
-		<h1>Your Project Name, or whatever</h1>
+		<h1>TEMAKI</h1>
 	</header>
 	<nav>
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 		<ul>
-			<li><a href="#">link</a></li>
-			<li><a href="#">link</a></li>
-			<li><a href="#">link</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="#">Menu</a></li>
+			<li><a href="#">About</a></li>
 		</ul>
 	</nav>
 	<main>
+		<img class="sushi-two" src="file:///Users/christine/Desktop/temaki.png">
 	<!-- Main content here -->
 	</main>
+	<div>
+		<h2>What is it?</h2>
+	<p>Sushi that has been hand-rolled into a cone shape</p>
+	<h2>Other info!</h2>
+	<p>The cones are not as easy to share as the rolls (though very delicious!)</p>
+	<h2>Filling options</h2>
+	<p>Sashimi-grade fish and sliced veggies/mango.If you are vegetarian  you can still make Temaki Sushi with vegetables  or use cooked ingredients such as Shrimp Tempura, grilled unagi, or even Chicken Teriyaki and Chicken Kaarage!</p>
+</div>
+		<ul class="bottom-list">
+		<li class="bottom"><a href="subpage-one.html">NIGIRI</a></li>
+		<li class="bottom"><a href="subpage-two.html">TEMAKI</a></li>
+		<li class="bottom"><a href="subpage-three.html">MAKI</a></li>
+		<li class="bottom"><a href="subpage-four.html">URAMAKI</a></li>
+	</ul>
 	<footer>
 		<!-- footer content here -->
 	</footer>
