--- a/index.html
+++ b/index.html
@@ -19,22 +19,23 @@
 	</header>
 	<nav>
 		<h1>SUSHI</h1>
-		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
-		<ul>
+			<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="#">Menu</a></li>
 			<li><a href="#">About</a></li>
 		</ul>
+		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
+	
 	</nav>
 	<main>
 	<!-- Main content here -->
 	<img src="file:///Users/christine/Desktop/sushi-home.png">
 	</main>
 	<ul class="bottom-list">
-		<li><a href="subpage-one.html">NIGIRI</a></li>
-		<li><a href="subpage-two.html">TEMAKI</a></li>
-		<li><a href="subpage-three.html">MAKI</a></li>
-		<li><a href="subpage-four.html">URAMAKI</a></li>
+		<li class="bottom"><a href="subpage-one.html">NIGIRI</a></li>
+		<li class="bottom"><a href="subpage-two.html">TEMAKI</a></li>
+		<li class="bottom"><a href="subpage-three.html">MAKI</a></li>
+		<li class="bottom"><a href="subpage-four.html">URAMAKI</a></li>
 	</ul>
 	<footer>
 		<!-- footer content here -->
