--- a/subpage-one.html
+++ b/subpage-one.html
@@ -23,11 +23,12 @@
 			<li><a href="#">About</a></li>
 		</ul>
 	</nav>
+	<hr>
 	<main>
-		<img class="sushi-one" src="file:///Users/christine/Desktop/nigiri.png">
 	<!-- Main content here -->
 	</main>
-	<div>
+		<img class="sushi-one" src="file:///Users/christine/Desktop/nigiri.png">
+		<div class="right">
 		<h2>What is it?</h2>
 	<p>A topping, usually fish, served on top of sushi rice</p>
 	<h2>Other info!</h2>
