--- a/index.html
+++ b/index.html
@@ -27,16 +27,20 @@
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 	
 	</nav>
+	<hr>
+	<div class="image">
 	<main>
 	<!-- Main content here -->
 	<img src="file:///Users/christine/Desktop/sushi-home.png">
 	</main>
+</div>
 	<ul class="bottom-list">
-		<li class="bottom"><a href="subpage-one.html">NIGIRI</a></li>
-		<li class="bottom"><a href="subpage-two.html">TEMAKI</a></li>
-		<li class="bottom"><a href="subpage-three.html">MAKI</a></li>
-		<li class="bottom"><a href="subpage-four.html">URAMAKI</a></li>
+		<li><a href="subpage-one.html">NIGIRI</a></li>
+		<li><a href="subpage-two.html">TEMAKI</a></li>
+		<li><a href="subpage-three.html">MAKI</a></li>
+		<li><a href="subpage-four.html">URAMAKI</a></li>
 	</ul>
+	<hr>
 	<footer>
 		<!-- footer content here -->
 		&copy; Christine Miller
