--- a/subpage-four.html
+++ b/subpage-four.html
@@ -13,34 +13,44 @@
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
 		<!-- header, h1, logo etc content -->
-		<h1>URAMAKI</h1>
+		
 	</header>
-	<nav>
-		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
-		<ul>
+<nav>
+		
+		<h1>URAMAKI</h1>
+			<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Menu</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="subpage-five.html">Menu</a></li>
+			<li><a href="subpage-six.html">About</a></li>
 		</ul>
+		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
+	
 	</nav>
-	<main>
-		<img class="sushi-four" src="file:///Users/christine/Desktop/uramaki.png">
-	<!-- Main content here -->
+	<hr>
+	<main><!-- Main content here -->
 	</main>
-	<div>
+	<section>
+		<div class="grid-item">
+		<img class="sushi-four" src="file:///Users/christine/Desktop/uramaki.png">
+	</div>
+	<div class="grid-item">
 		<h2>What is it?</h2>
 	<p>Similar to Maki, but rice is on the outside and seaweed wraps around the filling</p>
+	<br>
 	<h2>Other info!</h2>
 	<p>These rolls often have lots of toppings and sauces — they may either be cooked or raw</p>
+	<br>
 	<h2>Filling options</h2>
 	<p>Typically you would see Uramaki roll coated with toasted sesame seeds with fillings of avocado and salmon.</p>
 </div>
+</section>
 		<ul class="bottom-list">
 		<li class="bottom"><a href="subpage-one.html">NIGIRI</a></li>
 		<li class="bottom"><a href="subpage-two.html">TEMAKI</a></li>
 		<li class="bottom"><a href="subpage-three.html">MAKI</a></li>
 		<li class="bottom"><a href="subpage-four.html">URAMAKI</a></li>
 	</ul>
+	<hr>
 	<footer>
 		<!-- footer content here -->
 	</footer>
