--- a/subpage-one.html
+++ b/subpage-one.html
@@ -13,35 +13,49 @@
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
 		<!-- header, h1, logo etc content -->
-		<h1>SUSHI</h1>
 	</header>
-	<nav>
-		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
-		<ul>
+<nav>
+		
+		<h1>Nigiri</h1>
+			<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Menu</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="subpage-five.html">Menu</a></li>
+			<li><a href="subpage-six.html">About</a></li>
 		</ul>
+		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
+	
 	</nav>
 	<hr>
 	<main>
 	<!-- Main content here -->
 	</main>
+
+	<section>
+	<div class="grid-item">
 		<img class="sushi-one" src="file:///Users/christine/Desktop/nigiri.png">
-		<div class="right">
+		</div>
+		
+		<div class="grid-item">
+
 		<h2>What is it?</h2>
 	<p>A topping, usually fish, served on top of sushi rice</p>
+	<br>
 	<h2>Other info!</h2>
-	<p>Not all nigiri is raw, though this dish is best for people who want to appreciate the flavor of the fish, shellfish, or other toppings</p>
+	<p>Not all nigiri is raw, though this dish is best for people who want to appreciate the flavor of the fish, 
+	shellfish, or other toppings</p>
+	<br>
 	<h2>Topping options</h2>
 	<p>Fish (salmon, tuna), eel, squid, shrimp, egg, scallop, or roe.</p>
 </div>
+</section>
+	
 	<ul class="bottom-list">
 		<li class="bottom"><a href="subpage-one.html">NIGIRI</a></li>
 		<li class="bottom"><a href="subpage-two.html">TEMAKI</a></li>
 		<li class="bottom"><a href="subpage-three.html">MAKI</a></li>
 		<li class="bottom"><a href="subpage-four.html">URAMAKI</a></li>
 	</ul>
+	<hr>
 	<footer>
 		<!-- footer content here -->
 	</footer>
