--- a/subpage-two.html
+++ b/subpage-two.html
@@ -13,34 +13,48 @@
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
 		<!-- header, h1, logo etc content -->
-		<h1>TEMAKI</h1>
+		
 	</header>
 	<nav>
-		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
-		<ul>
+		
+		<h1>TEMAKI</h1>
+			<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Menu</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="subpage-five.html">Menu</a></li>
+			<li><a href="subpage-six.html">About</a></li>
 		</ul>
+		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
+	
 	</nav>
-	<main>
-		<img class="sushi-two" src="file:///Users/christine/Desktop/temaki.png">
-	<!-- Main content here -->
+	<hr>
+	<main><!-- Main content here -->
 	</main>
-	<div>
+	
+
+		<section>
+			<div class="grid-item">
+		<img class="sushi-two" src="file:///Users/christine/Desktop/temaki.png">
+		</div>
+	<!-- Main content here -->
+	
+	<div class="grid-item">
 		<h2>What is it?</h2>
 	<p>Sushi that has been hand-rolled into a cone shape</p>
+	<br>
 	<h2>Other info!</h2>
 	<p>The cones are not as easy to share as the rolls (though very delicious!)</p>
+	<br>
 	<h2>Filling options</h2>
 	<p>Sashimi-grade fish and sliced veggies/mango.If you are vegetarian  you can still make Temaki Sushi with vegetables  or use cooked ingredients such as Shrimp Tempura, grilled unagi, or even Chicken Teriyaki and Chicken Kaarage!</p>
 </div>
+</section>
 		<ul class="bottom-list">
 		<li class="bottom"><a href="subpage-one.html">NIGIRI</a></li>
 		<li class="bottom"><a href="subpage-two.html">TEMAKI</a></li>
 		<li class="bottom"><a href="subpage-three.html">MAKI</a></li>
 		<li class="bottom"><a href="subpage-four.html">URAMAKI</a></li>
 	</ul>
+	<hr>
 	<footer>
 		<!-- footer content here -->
 	</footer>
