--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 		
 	</header>
 	<nav>
+		 
 		<h1>SUSHI</h1>
+	
 			<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Menu</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="subpage-five.html">Menu</a></li>
+			<li><a href="subpage-six.html">About</a></li>
 		</ul>
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 	
@@ -31,7 +33,7 @@
 	<div class="image">
 	<main>
 	<!-- Main content here -->
-	<img src="file:///Users/christine/Desktop/sushi-home.png">
+	<img src="images/sushi-home 3.png">
 	</main>
 </div>
 	<ul class="bottom-list">
