--- a/subpage-three.html
+++ b/subpage-three.html
@@ -13,34 +13,44 @@
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
 		<!-- header, h1, logo etc content -->
-		<h1>MAKI</h1>
 	</header>
-	<nav>
-		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
-		<ul>
+<nav>
+		
+		<h1>MAKI</h1>
+			<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Menu</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="subpage-five.html">Menu</a></li>
+			<li><a href="subpage-six.html">About</a></li>
 		</ul>
+		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
+	
 	</nav>
+	<hr>
 	<main>
+			<!-- Main content here -->
+		</main>
+		<section>
+			<div class="grid-item">
 		<img class="sushi-three" src="file:///Users/christine/Desktop/maki.png">
-	<!-- Main content here -->
-	</main>
-	<div>
+	</div>
+	<div class="grid-item">
 		<h2>What is it?</h2>
 	<p>Rice and filling wrapped in seaweed</p>
+	<br>
 	<h2>Other info!</h2>
 	<p>This is what most people think of when they think of sushi rolls</p>
+	<br>
 	<h2>Filling options</h2>
 	<p>Maki sushi can be filled with raw fish, cooked fish, or other vegetables and sauces</p>
 </div>
+</section>
 		<ul class="bottom-list">
 		<li class="bottom"><a href="subpage-one.html">NIGIRI</a></li>
 		<li class="bottom"><a href="subpage-two.html">TEMAKI</a></li>
 		<li class="bottom"><a href="subpage-three.html">MAKI</a></li>
 		<li class="bottom"><a href="subpage-four.html">URAMAKI</a></li>
 	</ul>
+	<hr>
 	<footer>
 		<!-- footer content here -->
 	</footer>
