icon and styling

--- a/subpage-five.html
+++ b/subpage-five.html
@@ -5,6 +5,7 @@
 	<title>Sushi Menu</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -18,7 +19,7 @@
 		
 	</header>
 	<nav>
-		<h1>MENU</h1>
+		<h1><img src="images/sushi-icon.png">MENU</h1>
 			<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="subpage-five.html">Menu</a></li>
