--- a/subpage-four.html
+++ b/subpage-four.html
@@ -5,6 +5,8 @@
 	<title>Shushi - Uramaki</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -17,7 +19,7 @@
 	</header>
 <nav>
 		
-		<h1>URAMAKI</h1>
+		<h1><img src="images/sushi-icon.png">URAMAKI</h1>
 			<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="subpage-five.html">Menu</a></li>
@@ -31,14 +33,21 @@
 	</main>
 	<section>
 		<div class="grid-item">
-		<img class="sushi-four" src="file:///Users/christine/Desktop/uramaki.png">
+		<img class="sushi-four" src="images/uramaki-one.png">
 	</div>
 	<div class="grid-item">
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 		<h2>What is it?</h2>
 	<p>Similar to Maki, but rice is on the outside and seaweed wraps around the filling</p>
 	<br>
+	<br>
 	<h2>Other info!</h2>
 	<p>These rolls often have lots of toppings and sauces — they may either be cooked or raw</p>
+	<br>
 	<br>
 	<h2>Filling options</h2>
 	<p>Typically you would see Uramaki roll coated with toasted sesame seeds with fillings of avocado and salmon.</p>
