--- a/subpage-three.html
+++ b/subpage-three.html
@@ -5,6 +5,8 @@
 	<title>Shushi - Maki</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -16,7 +18,7 @@
 	</header>
 <nav>
 		
-		<h1>MAKI</h1>
+		<h1><img src="images/sushi-icon.png">MAKI</h1>
 			<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="subpage-five.html">Menu</a></li>
@@ -31,14 +33,22 @@
 		</main>
 		<section>
 			<div class="grid-item">
-		<img class="sushi-three" src="file:///Users/christine/Desktop/maki.png">
+		<img class="sushi-three" src="file:///Users/christine/Desktop/maki-one.png">
 	</div>
 	<div class="grid-item">
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 		<h2>What is it?</h2>
 	<p>Rice and filling wrapped in seaweed</p>
 	<br>
+	<br>
 	<h2>Other info!</h2>
 	<p>This is what most people think of when they think of sushi rolls</p>
+	<br>
 	<br>
 	<h2>Filling options</h2>
 	<p>Maki sushi can be filled with raw fish, cooked fish, or other vegetables and sauces</p>
