--- a/subpage-two.html
+++ b/subpage-two.html
@@ -5,6 +5,8 @@
 	<title>Shushi - Temaki</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -17,7 +19,7 @@
 	</header>
 	<nav>
 		
-		<h1>TEMAKI</h1>
+		<h1><img src="images/sushi-icon.png">TEMAKI</h1>
 			<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="subpage-five.html">Menu</a></li>
@@ -33,16 +35,24 @@
 
 		<section>
 			<div class="grid-item">
-		<img class="sushi-two" src="file:///Users/christine/Desktop/temaki.png">
+		<img class="sushi-two" src="file:///Users/christine/Desktop/temaki-one.png">
 		</div>
 	<!-- Main content here -->
 	
 	<div class="grid-item">
+			
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
 		<h2>What is it?</h2>
 	<p>Sushi that has been hand-rolled into a cone shape</p>
 	<br>
+	<br>
 	<h2>Other info!</h2>
 	<p>The cones are not as easy to share as the rolls (though very delicious!)</p>
+	<br>
 	<br>
 	<h2>Filling options</h2>
 	<p>Sashimi-grade fish and sliced veggies/mango.If you are vegetarian  you can still make Temaki Sushi with vegetables  or use cooked ingredients such as Shrimp Tempura, grilled unagi, or even Chicken Teriyaki and Chicken Kaarage!</p>
