--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Sushi Types</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -19,9 +20,9 @@
 	</header>
 	<nav>
 		 
-		<h1>SUSHI</h1>
+		<h1><img src="images/sushi-icon.png">SUSHI</h1>
 	
-			<ul>
+		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="subpage-five.html">Menu</a></li>
 			<li><a href="subpage-six.html">About</a></li>
@@ -33,7 +34,7 @@
 	<div class="image">
 	<main>
 	<!-- Main content here -->
-	<img src="images/sushi-home 3.png">
+	<img src="images/home-sushi.png">
 	</main>
 </div>
 	<ul class="bottom-list">
