--- a/subpage-one.html
+++ b/subpage-one.html
@@ -5,6 +5,8 @@
 	<title>Sushi - Nigiri</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 	<!-- This is a special css library that overrides all the ugle default css styles that come with html5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -16,7 +18,7 @@
 	</header>
 <nav>
 		
-		<h1>Nigiri</h1>
+		<h1><img src="images/sushi-icon.png">Nigiri</h1>
 			<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="subpage-five.html">Menu</a></li>
@@ -32,17 +34,26 @@
 
 	<section>
 	<div class="grid-item">
-		<img class="sushi-one" src="file:///Users/christine/Desktop/nigiri.png">
+		<img class="sushi-one" src=file:///Users/christine/Desktop/nigiri-1.png>
 		</div>
 		
 		<div class="grid-item">
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
 
 		<h2>What is it?</h2>
 	<p>A topping, usually fish, served on top of sushi rice</p>
 	<br>
+	<br>
 	<h2>Other info!</h2>
 	<p>Not all nigiri is raw, though this dish is best for people who want to appreciate the flavor of the fish, 
 	shellfish, or other toppings</p>
+	<br>
 	<br>
 	<h2>Topping options</h2>
 	<p>Fish (salmon, tuna), eel, squid, shrimp, egg, scallop, or roe.</p>
