--- a/subpage-five.html
+++ b/subpage-five.html
@@ -32,7 +32,7 @@
 	<div class="image">
 	<main>
 	<!-- Main content here -->
-	<img class="menu" src="file:///Users/christine/Desktop/sushi-menu.png">
+	<img class="menu" src="images/sushi-menu.png">
 	</main>
 </div>
 	<ul class="bottom-list">
