image file corrections

--- a/subpage-one.html
+++ b/subpage-one.html
@@ -34,7 +34,7 @@
 
 	<section>
 	<div class="grid-item">
-		<img class="sushi-one" src=file:///Users/christine/Desktop/nigiri-1.png>
+		<img class="sushi-one" src="images/nigiri-1.png">
 		</div>
 		
 		<div class="grid-item">
