--- a/subpage-three.html
+++ b/subpage-three.html
@@ -33,7 +33,7 @@
 		</main>
 		<section>
 			<div class="grid-item">
-		<img class="sushi-three" src="file:///Users/christine/Desktop/maki-one.png">
+		<img class="sushi-three" src="images/maki-one.png">
 	</div>
 	<div class="grid-item">
 		<br>
