--- a/subpage-two.html
+++ b/subpage-two.html
@@ -35,7 +35,7 @@
 
 		<section>
 			<div class="grid-item">
-		<img class="sushi-two" src="file:///Users/christine/Desktop/temaki-one.png">
+		<img class="sushi-two" src="images/temaki-one.png">
 		</div>
 	<!-- Main content here -->
 	
